--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 header, section, footer, {
   display: block}
+  body {
+    background-image: url(http://www.uidownload.com/files/841/25/241/free-radiant-background.jpg);
+  }
   h1{
     background-color: #ccffcc;
     color: #3399ff;
     font-family: sans-serif;
     font-weight: 40;
+    }
+    h2{
+      color: #6600cc;
+      font-family: sans-serif;
+      font-weight: 25;
     }
