--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header, aside, section, footer, {
     font-size: 60px;
     }
     h2{
-      color: #6600cc;
+      color: #6600cc;s
       font-family: sans-serif;
       font-weight: 25px;
       font-size: 25px;
@@ -31,4 +31,15 @@ header, aside, section, footer, {
 .doing {
   font-size: 20px;
   font-weight: 10px;
+}
+div {
+  width: 200px;
+  height:200px;
+  border: thin;
+  border-color: #cc00ff;
+
+}
+.content-box
+{
+  box-sizing: content-box;
 }
