--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ header, aside, section, footer, {
   body {
     background-image: url(http://www.uidownload.com/files/841/25/241/free-radiant-background.jpg);
   }
+
   h1{
     background-color: #ccffcc;
     color: #3399ff;
@@ -10,6 +11,7 @@ header, aside, section, footer, {
     font-weight: 40px;
     font-size: 60px;
     }
+
     h2{
       color: #6600cc;s
       font-family: sans-serif;
@@ -32,13 +34,13 @@ header, aside, section, footer, {
   font-size: 20px;
   font-weight: 10px;
 }
-div {
+/*div {
   width: 200px;
   height:200px;
   border: thin;
   border-color: #cc00ff;
 
-}
+}*/
 .content-box
 {
   box-sizing: content-box;
