--- a/style.css
+++ b/style.css
@@ -46,9 +46,13 @@ header, aside, section, footer, {
   box-sizing: border-box;
   margin:auto;
   border: 20px solid #cc00ff;
-  width: 60%;
+  width: 40%;
   text-align: center;
-}
+  background-color: #ccccff;
+  font-family: sans-serif;
+  font-weight: 20px;
+  color: #660066;
+  }
 
 .color-list {
   width: 30%;
